Update each page's heading menu with two new page links and style css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,20 @@
     background-color: #f4f4f4;
 }
 
+.bg-color-skills {
+    background-color: #ffffff;
+}
+
 .bg-color-contact {
     background-color: #fff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
@@ -35,7 +47,22 @@
 }
 
 .ui-menu-color-download {
+    background-color: #d9a81d;
+}
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
     background-color: #525252;
+    color: #555555;
 }
 
 /* ---------- Special paddings/margins/texts ---------- */
@@ -267,7 +294,6 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
-
 }
 
 /* ---------- Skills ---------- */
